tests/chapter_18/invalid_struct_tags/param_undeclared.c
// can't use an undeclared (or incomplete) type tag
// as a pararameter in a function definition
int foo(struct s x) {
    return 0;
}